@@ -1,3 +1,7 @@
+Development Version
+
+- Fix for portfolio pages when single column selected
+
 Portfolio Press 1.2.2
 
 - Fix for image alignment bug (introduced in 1.2)
